fixed some text and some z-index

--- a/css/styles.css
+++ b/css/styles.css
@@ -1792,7 +1792,7 @@ Hero
 
 .book-sub-heading {
   position: relative;
-  z-index: 3;
+  z-index: 1;
   -webkit-transition: var(--transition);
   -o-transition: var(--transition);
   transition: var(--transition);
